name:                pure-try
version:             0.8.0.0
homepage:            purehs.org/doc/pure-try
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-try.git

library
  build-depends:
    base,
    pure-default,
    pure-json

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.Try

  default-language: Haskell2010
